# stock-worm

./: .gitignore  LICENSE  README.md  build_accrual_bvps.py  build_buffett_ratio.py  pyproject.toml
docs/compose/plans/: 2026-07-03-sentiment-monitor.md
quant_proto/: diag_v3.py  proto_results.md  proto_v2_results.md  proto_v2_v3_v4_comparison.md  proto_v3_results.md  proto_v4_results.md  run_full_on_build_done.sh  shap_analysis.py  xgb_wfa_proto.py  xgb_wfa_proto_v2.py  xgb_wfa_proto_v3.py  xgb_wfa_proto_v4.py  xgb_wfa_proto_v4_full.py
quant_proto/v4proto_out/: feats_v4full.json  shap_report.md
stcok_worm/: __init__.py  _session.py  bond_yield.py  cb_sina.py  cnstock.py  datalake.py  eastmoney.py  filings.py  fundamentals.py  fundamentals_ext.py  index.py  industry_map.py  lake_build.py  macro.py  mootdx_source.py  news.py  options.py  realtime.py  regulatory.py  research.py  signals.py  stockstar.py  tencent.py
stcok_worm/sentiment/: __init__.py  collector.py  config.py  factor.py  models.py  monitor.py
stcok_worm/sentiment/analyzers/: __init__.py  dictionary.py  hybrid.py  llm.py
stcok_worm/sentiment/crawlers/: __init__.py  base.py  douyin.py  eastmoney_news.py  guba.py  weibo.py
stockworm_build/: build_cnstock_fund.py  build_lake.py  drive_stmt.py  run_stmt_loop.sh
tests/test_sentiment/: test_analyzers.py  test_crawlers.py  test_models.py
